fix up treetableviewtest