@@ -28,13 +28,9 @@ package test.javafx.scene.control;
 import static javafx.scene.control.TreeTableColumn.SortType.ASCENDING;
 import static javafx.scene.control.TreeTableColumn.SortType.DESCENDING;
 import static test.com.sun.javafx.scene.control.infrastructure.ControlTestUtils.assertStyleClassContains;
-
-import java.beans.Transient;
 import java.util.ArrayList;
 import java.util.Comparator;
-import java.util.HashMap;
 import java.util.List;
-import java.util.Map;
 import java.util.Objects;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.function.Consumer;
@@ -7936,7 +7932,6 @@ public class TreeTableViewTest {
 
     @Test
     public void testGetTreeItem() {
-
         List<TreeItem<String>> treeItems = new ArrayList<>(20);
         for (int i = 0; i < 20; i++) {
             treeItems.add(new TreeItem<>(Integer.toString(i)));
@@ -7975,7 +7970,7 @@ public class TreeTableViewTest {
         treeItems.get(16).getChildren().addAll(List.of(treeItems.get(17), treeItems.get(18), treeItems.get(19)));
         treeItems.get(16).setExpanded(true);
 
-        TreeTableView<String> ttv = new TreeTableView<>(treeItems.get(0));
+        TreeTableView<String> ttv = new TreeTableView<>(treeItems.getFirst());
 
         List<String> expectedValues, actualValues;
 
@@ -8033,7 +8028,7 @@ public class TreeTableViewTest {
         //         └── 19
 
         assertEquals(17, ttv.getExpandedItemCount());
-        expectedValues = List.of(0, 1, 2, 3, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19).stream().map(String::valueOf).toList();
+        expectedValues = Stream.of(0, 1, 2, 3, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19).map(String::valueOf).toList();
         actualValues = IntStream.range(0, 17).mapToObj(i -> ttv.getTreeItem(i).getValue()).toList();
         assertEquals(expectedValues, actualValues);
 
@@ -8062,7 +8057,7 @@ public class TreeTableViewTest {
         //         └── 19
 
         assertEquals(12, ttv.getExpandedItemCount());
-        expectedValues = List.of(0, 1, 2, 11, 12, 13, 14, 15, 16, 17, 18, 19).stream().map(String::valueOf).toList();
+        expectedValues = Stream.of(0, 1, 2, 11, 12, 13, 14, 15, 16, 17, 18, 19).map(String::valueOf).toList();
         actualValues = IntStream.range(0, 12).mapToObj(i -> ttv.getTreeItem(i).getValue()).toList();
         assertEquals(expectedValues, actualValues);
     }
